# HH-Copilot

./: .ahg-integrity.json  .ahg-setup-stamp  .ahgrc  .gitignore  .gitmodules  AGENTS.md  AGENT_RULES.md  CHANGELOG.md  HH-bot-project-report.md  README-WINDOWS.md  README.md  cascade-cli.sh  cascade-state.json  instrumentation.ts  next.config.ts  opencode.json  package.json  tsconfig.tsbuildinfo  verify-docs.json  worklog.md
cascade/: state.json
hh-bot/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run_api.sh
hh-bot/scripts/: run_api.py  run_bot.py  run_worker.py
hh-bot/src/: config.py  main.py
hh-bot/src/ai/: cover_letter.py  sanitizer.py
hh-bot/src/api/: app.py  auth.py  auth_verify.py  bot_status.py  negotiations.py  resumes.py  schemas.py  seed.py  settings.py  stats.py  vacancies.py
hh-bot/src/bot/: dispatcher.py
hh-bot/src/bot/filters/: auth.py
hh-bot/src/bot/handlers/: apply.py  auth.py  career.py  negotiations.py  resume.py  search.py  settings.py
hh-bot/src/bot/keyboards/: inline.py
hh-bot/src/bot/states/: states.py
hh-bot/src/db/: database.py  models.py  repositories.py
hh-bot/src/hh/: anti_detect.py  api_client.py  auth.py  browser_auth.py  browser_client.py  hybrid_client.py  models.py  selectors.py
hh-bot/src/matching/: engine.py
hh-bot/src/services/: negotiation_service.py  rate_limiter.py  resume_service.py  vacancy_service.py
hh-bot/src/utils/: health.py  retry.py  text.py
hh-bot/src/worker/: celery_app.py  tasks.py
hh-bot/tests/: conftest.py  test_matching.py  test_utils.py
(+471 files in other folders)
