[project]
name = "hh-bot"
version = "0.1.0"
description = "Telegram bot for automatic response to relevant vacancies on HH.ru"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "httpx>=0.27,<1",
    "playwright>=1.45,<2",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "celery[redis]>=5.4,<6",
    "redis>=5.0,<6",
    "openai>=1.35,<2",
    "numpy>=1.26,<2",
    "scikit-learn>=1.5,<2",
    "loguru>=0.7,<1",
    "cryptography>=42,<43",
    "python-dotenv>=1.0,<2",
    "fastapi>=0.110,<1",
    "uvicorn>=0.29,<1",
    "bcrypt>=4.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
